<resources>
    <string name="app_name">House Mate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_bookings">UserBookings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="login_button">Iniciar Sesión</string>
    <string name="register_button">Registrarme</string>
    <string name="logout_button">Cerrar sesión</string>
    <string name="book_button">Reservar habitación</string>
    <string name="unbook_button">Cancelar reserva</string>
    <string name="publish_button">Publicar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="delete_room_button">Eliminar habitación</string>
    <string name="search_button">Buscar</string>

    <string name="mail_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="name_hint">Nombre completo</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="title_hint">Título</string>
    <string name="city_hint">Ciudad</string>
    <string name="maximum_days_hint">Estancia máxima (días)</string>
    <string name="description_hint">Descripción (max. 150 caracteres)</string>
    <string name="address_hint">Dirección</string>
    <string name="price_hint">Precio</string>
    <string name="max_price_hint">Precio max.</string>

    <string name="bookings_text">Mis reservas:</string>
    <string name="title_text">Título del anuncio:</string>
    <string name="city_text">Ciudad:</string>
    <string name="address_text">Dirección:</string>
    <string name="description_text">Descripción:</string>
    <string name="final_price_text">Precio final:</string>
    <string name="price_text">Precio:</string>
    <string name="booked_by_text">Arrendatario:</string>
    <string name="filter_by_text">Filtrar por:</string>
    <string name="posted_by_text">Arrendador:</string>
    <string name="maximum_days_text">Estancia máxima:</string>
    <string name="desired_days_text">Estancia deseada:</string>
    <string name="reserved_text">Reservado</string>
    <string name="night_price_text"> €/noche</string>
    <string name="booked_stay">Estancia reservada: </string>
    <string name="night_text"> noches</string>

    <string name="toast_1">Completa los datos</string>
    <string name="toast_2">Debes verificar el correo electrónico</string>
    <string name="toast_3">Credenciales erroneas</string>
    <string name="toast_4">Error al iniciar sesión.</string>

    <string name="toast_5">No puedes reservar una habitacion publicada por ti.</string>
    <string name="toast_6">Debes introducir un número de días.</string>
    <string name="toast_7">Habitación reservada con éxito.</string>
    <string name="toast_8">El número de días introducido no es válido.</string>

    <string name="toast_9">Reserva cancelada con éxito.</string>

    <string name="toast_10">Completa los datos.</string>
    <string name="toast_11">Debes seleccionar una imagen de usuario.</string>
    <string name="toast_12">Error al subir la imagen.</string>
    <string name="toast_13">Ese nombre de usuario ya está en uso.</string>
    <string name="toast_14">La contraseña debe ser de al menos 6 caracteres.</string>
    <string name="toast_15">Acción cancelada por el usuario.</string>
    <string name="toast_16">Registro completado con éxito, se ha enviado un correo de verificación.</string>
    <string name="toast_17">Error al registrar el usuario, inténtalo de nuevo mas tarde.</string>
    <string name="toast_18">Ese correo ya está en uso.</string>

    <string name="toast_19">No puedes eliminar una habitación publicada por otra persona.</string>
    <string name="toast_20">No puedes reservar una habitación reservada .</string>
    <string name="toast_21">Habitación eliminada correctamente.</string>

</resources>