<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50px"
        android:background="@drawable/custom_dialog">


        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="90dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/roomImage"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:background="@color/black"
                android:clickable="true"
                app:srcCompat="@android:drawable/ic_menu_camera"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/title_text"
                android:textColor="@color/black"
                android:padding="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/roomTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                android:text="@string/city_text"
                android:padding="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/roomCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/description_text"
                android:textColor="@color/black"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/roomDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="top"
                android:maxLength="150" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/address_text"
                android:textColor="@color/black"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/roomAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="top"
                android:maxLength="150" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/booked_by_text"
                android:textColor="@color/black"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/bookedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="top"
                android:maxLength="150" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:ems="10"
                android:text="@string/final_price_text"
                android:inputType="text"
                android:padding="10dp" />

            <TextView
                android:id="@+id/roomPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="€"
                android:padding="10dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/bookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ff8000"
            android:text="@string/delete_room_button"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>